# np-shape-lab

./: .README.md.kate-swp  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  NOTICE  NP_shape_simulation_job.pbs  README.md  RELEASE  control.h  edge.cpp  edge.h  face.h  functions.cpp  functions.h  interface.cpp  interface.h  main.cpp  newenergies.h  newforces.cpp  newforces.h  newmd.cpp  thermostat.h  utility.h  vector3d.cpp  vector3d.h  vertex.h
.github/workflows/: linux.yml
Example_outfiles/: 20000.off  25000.off  initial_membrane.xyz  local_elastic_E_initial.off  local_electrostatic_E_initial.off
examples/Example_outfiles/: 10000.off  15000.off  30000.off  simulation.out
examples/HomogeneouslyCharged_Disc_Control/: 10000.off  15000.off  20000.off  25000.off  5000.off  local_bending_E.off  local_elastic_E.off  local_electrostatic_E.off  local_stretching_E.off  (+2 more)
images/: overview.psd
mathematica_framework/: NBTools.wl
middleware/: invoke
paper_data/: readme
post_optimization/: readme
python/: README.md  svg.py
pythonscripts/: .#Alms2.py  Alms.py  Alms2.py  asphericity.py  calculatingAlms.py  disc.txt  extendedAlms.py  hemi.txt  initialsphere.txt  p.lammpstrj  poles.txt  sphere.txt
scripts/: bigred2_archived.pbs  iu_cluster_job_script.pbs  test.pbs
src/: Makefile  README.md  control.h  edge.cpp  edge.h  face.cpp  face.h  functions.cpp  functions.h  interface.cpp  interface.h  main.cpp  mpi_utility.h  newenergies.cpp  newenergies.h  newforces.cpp  newforces.h  newmd.cpp  particle.h  thermostat.h  utility.h  vector3d.h  vertex.cpp  vertex.h
(+179 files in other folders)
